--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "commander": "^11.1.0",
     "fs-extra": "^11.1.1",
-    "glob-promise": "^6.0.5"
+    "glob-promise": "^6.0.5",
+    "prettier": "^3.0.3"
   }
 }
