--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -49,10 +49,20 @@
           with:
             lfs: true
 
+        # Setup node for NPM package caching
+        - name: Configure Node.js
+          uses: actions/setup-node@v3
+          with:
+            cache: 'npm'
+
         # Setup GitHub pages
         - name: Setup pages
           uses: actions/configure-pages@v3
           id: pages
+
+        # Install NPM dependencies
+        - name: Install dependencies
+          run: npm install
 
         # Run the Build script to create the distribution folder
         - name: Build site
